[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tiestim"
version = "0.1.0"
description = "Browser UI + API for dual TiePie HS5 AWG (DS5 / TI stimulation)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "numpy>=2.0.0",
  "pydantic>=2.9.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
hardware = ["python-libtiepie>=1.5.0"]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
